--- a/finalProject/index.html
+++ b/finalProject/index.html
@@ -74,7 +74,7 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <!-- Slide One - Set the background image for this slide in the line below -->
-                <div class="carousel-item active" style="background-image: url('css/logo.jpg')">
+                <div class="carousel-item active" style="background-image: url('logo.jpg')">
                     <div class="carousel-caption d-none d-md-block">
 
                         <h3 class= "text"> Prepare delicious meals right from the comfort of your own home.</h3>
