--- a/finalProject/services.html
+++ b/finalProject/services.html
@@ -16,6 +16,8 @@
   crossorigin="anonymous"></script>
    
      <script src="project.js"></script>
+
+     <link rel="stylesheet" type="text/css" href="modern-bussiness.css">
 </head>
 <body>
     <!-- Navigation -->
