--- a/finalProject/services.html
+++ b/finalProject/services.html
@@ -17,7 +17,7 @@
    
      <script src="project.js"></script>
 
-     <link rel="stylesheet" type="text/css" href="modern-bussiness.css">
+     <link rel="stylesheet" type="text/css" href="css/modern-business.css">
 </head>
 <body>
     <!-- Navigation -->
